--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.0.0",
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "recoil": "^0.7.7",
     "vite": "^4.3.9",
     "web-vitals": "^2.1.4"
   },
